syntax = "proto3";
option go_package = ".;pb";
import "comm.proto";

//发送验证码请求
message SendEmailCaptchaReq {
   string Mailbox = 1;              //邮箱
   CaptchaType CaptchaType = 2;     //验证码类型
   string Sign = 3;                 //签名
}