syntax = "proto3";
option go_package = ".;pb";
import "db_user.proto";

//登录请求 验证码
message LoginByCaptchaReq {
   string PhonOrEmail = 1; 
   string Captcha =2;
   string Sign = 3;                 //签名
}

//登录请求 密码
message LoginByPasswordReq {
   string PhonOrEmail = 1; 
   string Password =2;
   string Sign = 3;                 //签名
}

//登录请求 token
message LoginByTokenReq {
   string Token = 1;
   string Sign = 2;                 //签名
}


//登录请求 token
message LoginResp {
   string Token = 1;
   DB_UserData UserData  = 2;
}

//登出请求
message LoginOutReq {
}
